Clean up services + improve customer booking UI